<resources>
    <string name="app_name">Marketim</string>
    <string name="app_name_text_all_caps">MARKETİM</string>

    <string name="username_key" translatable="false">kariyer</string>
    <string name="password_key" translatable="false">2019ADev</string>

    <string name="act_login_username">Kullanıcı Adı</string>
    <string name="act_login_password">Şifre</string>
    <string name="act_login_remember_me">Beni Hatırla</string>
    <string name="act_login_button_text">Giriş</string>
    <string name="act_login_error_message">Kullanıcı adı veya şifre hatalı, lütfen tekrar deneyiniz</string>

    <string name="act_orders_product_price">%1$.2f \u20BA</string>
    <string name="act_orders_my_orders">Siparişlerim</string>
    <string name="act_orders_logout">Çıkış Yap</string>
    <string name="act_orders_logout_dialog_title">Çıkış Yap</string>
    <string name="act_orders_logout_dialog_content">Çıkış yapmak istiyor musunuz?</string>
    <string name="act_orders_logout_dialog_confirm">İstiyorum</string>
    <string name="act_orders_logout_dialog_cancel">İptal</string>
    <string name="act_orders_expansion_arrow_image_description">Ürün detayı</string>

    <string name="product_state_preparing_key" translatable="false">Hazırlanıyor</string>
    <string name="product_state_confirmation_key" translatable="false">Onay Bekliyor</string>
    <string name="product_state_delivering_key" translatable="false">Yolda</string>

    <string name="product_state_preparing">Hazırlanıyor</string>
    <string name="product_state_confirmation">Onay Bekliyor</string>
    <string name="product_state_delivering">Yolda</string>

    <string name="january">Ocak</string>
    <string name="february">Şubat</string>
    <string name="march">Mart</string>
    <string name="april">Nisan</string>
    <string name="may">Mayıs</string>
    <string name="june">Haziran</string>
    <string name="july">Temmuz</string>
    <string name="august">Ağustos</string>
    <string name="september">Eylül</string>
    <string name="october">Ekim</string>
    <string name="november">Kasım</string>
    <string name="december">Aralık</string>

</resources>
